--- a/gateway-api/package.json
+++ b/gateway-api/package.json
@@ -17,11 +17,12 @@
   },
   "homepage": "https://github.com/raghunat/hotspot#readme",
   "dependencies": {
-    "body-parser": "^1.17.0",
-    "cors": "^2.8.1",
+    "body-parser": "^1.17.1",
+    "cors": "^2.8.3",
     "dotenv": "^4.0.0",
-    "express": "^4.15.0",
-    "mongodb": "^2.2.25"
+    "express": "^4.15.2",
+    "mongodb": "^2.2.25",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
